--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,142 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Poppins:wght@100;200;300;400;500;600&family=Roboto:wght@100;300;400;500;700&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+.App {
+  background-color: #eeeeee;
+  min-height: 100vh;
+}
+.header {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+
+.toggle {
+  display: block;
+  flex-basis: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+  color: #828282;
+}
+
+.logo {
+  margin: 0;
+  display: block;
+  flex-basis: 60%;
+  text-align: center;
+  font-size: 1.6rem;
+  color: #333333;
+}
+
+.spacer {
+  flex-basis: 20%;
+}
+
+.container {
+  padding: 0 27px;
+}
+
+.container > h2 {
+  font-weight: 200;
+  font-size: 1.5rem;
+  margin-top: 0;
+}
+
+.tasks {
+  padding-bottom: 30px;
+}
+
+.task {
+  background-color: white;
+  display: flex;
+  min-height: 60px;
+  padding: 20px;
+  border-radius: 20px;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.done {
+  height: 23px;
+  width: 23px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #cdcccc;
+  color: #eeeeee;
+}
+
+.delete {
+  height: 23px;
+  width: 23px;
+  font-size: 1.1rem;
+  color: #cdcccc;
+}
+
+.task-title {
+  font-size: 1.1rem;
+  max-width: 233px;
+}
+
+.input-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  margin: 10px 0px 5px 0px;
+}
+
+.todo-input {
+  height: 45px;
+  width: 250px;
+  border: none;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  font-size: 1.2rem;
+  padding: 15px 10px;
+}
+
+.todo-input:focus {
+  outline: none;
+}
+
+.addButton {
+  width: 70px;
+  height: 45px;
+  border: none;
+  background-color: #4385f5;
+  color: white;
+  font-weight: 600;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  font-size: 1.2rem;
+}
+
+@media (min-width: 575px) {
+  .toggle > .toggle-icon {
+    display: none;
+  }
+
+  .todo-input {
+    width: 450px;
+  }
+
+  .addButton {
+    width: 120px;
+  }
 }
